@@ -1,9 +1,10 @@
 -server
--Xmx16G
+-Xmx5G
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
+-Djdk.attach.allowAttachSelf=true
 
